--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Roboto&display=swap" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
   <style>a{text-decoration: none;}</style>
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
 </head>
 
 <body>
@@ -80,7 +77,7 @@
         <p>In 2005, an estimated 100 million people worldwide were homeless. The following statistics indicate the approximate average number of homeless people at any one time.  Each country has a different approach to counting homeless people, and estimates of homelessness made by different organizations vary wildly, so comparisons should be made with caution..</p>
       
         <div class="btn">
-        <span> Sign Up </span> 
+        <span> View Postings </span> 
         </div>
       </div>
       
