--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
      
   </div>
   <footer>
-    <p>Copyright Miracle Messaages Build Team 2019.</p>
+    <p>Miracle Messages Build Team 10/2019.</p>
   </footer>
 </body>
 </html>
