link to react devs

--- a/about.html
+++ b/about.html
@@ -18,12 +18,16 @@
     <div class="title">
       <h1>Meet the Build Week Team</h1>
     </div>
+
     <nav>
       <a href="index.html">Home</a>
       <a href="#">About</a>
-      <a href="#">View Active</a>
       <a href="#">Contact</a>
-      <a href="#">Log In</a>
+      <a href="https://bw-miracle-messages.netlify.com/public">
+        View Active</a>
+      <a href="https://bw-miracle-messages.netlify.com/login">
+        Log In
+      </a>
     </nav>
 
   </div>
@@ -33,7 +37,7 @@
             <img src="img/LindseyCason.jpg" alt="Lindsey Cason Java Developer">
         </div>
       <div class="info-text">
-        <h3>Lindsey Casey</h3>
+        <h3>Lindsey Cason</h3>
         <ul>
             <li>
                 <h4> Web 22</h4>
@@ -42,7 +46,7 @@
                 <h4>  Backend Developer - Java</h4>
                 </li>
             <li>
-              <p>Full Time Full Stack Web Dev student at Lambda.</p>              
+              <p>Lindsey Cason lives in New Orleans, LA. She is currently a Full Stack Web Developer student at Lambda School. She enjoys checking out the many festivals of NOLA, spending time with family, friends and pups and spending any free time near the beach.</p>              
             </li>    
         </ul>
         <div class="connect">
@@ -136,16 +140,13 @@
                     <h4>  Web UI Developer</h4>
                     </li>
                     <li>
-                      <p>Full Time Full Stack Web Dev student at Lambda.</p>              
+                      <p>Chance Rutledge is currently living in Central CA and is a Full Stack Web Develpment student at Lambda School. He has a background software Quality Assurance, DVD & Blu-Ray authoring and post production for home theatrical release titles.</p>              
                   </li>                       
             </ul>
             <div class="connect">
-              <a href="https://github.com/crutledgedev/">
-                <i class="fab fa-github-square"></i>
-              </a>
               <a href="https://crutledgedev.github.io/">
-                <i class="far fa-id-card"></i>
-              </a>
+                <i class="fab fa-github-square"></i>
+              </a>     
               </div>
         </div>
         
@@ -172,7 +173,7 @@
                 <h4>  Project Manager</h4>
                 </li>
                 <li>
-                  <p>Full Stack Web Developer and Team Lead at Lambda SChool.</p>              
+                  <p>Full Stack Web Developer and Team Lead at Lambda School.</p>              
                 </li>   
         </ul>
 
