tablet break, corrections, and polish

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <a href="index.html">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
-      <a href="https://bw-miracle-messages.netlify.com/public">
+      <a href="https://bw-miracle-messages.netlify.com/">
         View Active</a>
       <a href="https://bw-miracle-messages.netlify.com/login">
         Log In
@@ -109,11 +109,10 @@
                 <h4>  Front End Developer</h4>
                 </li>
             <li>
-              <p>Full Time Full Stack Web Dev student at Lambda.</p>              
+              <p>Michael Nunes lives in Southern California and is currently a Full Stack Web Developer student at Lambda School. A self-starter that brings experience in managing teams and working with those in different fields towards a common goal. I am a life long learner and am excited to use new technologies and frameworks on projects while also meeting new people in my field.</p>              
             </li>           
         </ul>
-        <p>Self-starter that brings experience in managing teams and working with those in different fields towards a common goal. I am a life long learner and am excited to use new technologies and frameworks on projects while also meeting new people in my field.</p>
-
+    
         <div class="connect">
           <a href="https://github.com/TinySquid">
             <i class="fab fa-github-square"></i>
@@ -140,7 +139,7 @@
                     <h4>  Web UI Developer</h4>
                     </li>
                     <li>
-                      <p>Chance Rutledge is currently living in Central CA and is a Full Stack Web Develpment student at Lambda School. He has a background software Quality Assurance, DVD & Blu-Ray authoring and post production for home theatrical release titles.</p>              
+                      <p>Chance Rutledge lives in Central California and is currently a Full Stack Web Develpment student at Lambda School. He has a background in software Quality Assurance as well as DVD & Blu-Ray authoring and post production services for studio theatrical release to home video.</p>              
                   </li>                       
             </ul>
             <div class="connect">
